crates/cockpitctl-ingest/tests/snapshots/snapshot_tests__empty_sensors_directory.snap
---
source: crates/cockpitctl-ingest/tests/snapshot_tests.rs
assertion_line: 305
expression: result.report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "test",
    "version": "1.0.0"
  },
  "run": {
    "started_at": "2026-02-01T00:00:00Z"
  },
  "verdict": {
    "status": "pass",
    "counts": {
      "info": 0,
      "warn": 0,
      "error": 0
    },
    "reasons": []
  },
  "sensors": [],
  "highlights": [],
  "policy": {
    "warn_is_fail": false,
    "max_highlights": 7,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Highlights",
      "Repo contract",
      "Dependencies",
      "Policy",
      "Tests",
      "Diagnostics",
      "Performance",
      "Environment",
      "Other"
    ],
    "sensors": []
  }
}
