crates/cockpitctl-ingest/tests/snapshots/snapshot_tests__happy_path_two_passing_sensors.snap
---
source: crates/cockpitctl-ingest/tests/snapshot_tests.rs
assertion_line: 221
expression: result.report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "test",
    "version": "1.0.0"
  },
  "run": {
    "started_at": "2026-02-01T00:00:00Z"
  },
  "verdict": {
    "status": "pass",
    "counts": {
      "info": 1,
      "warn": 0,
      "error": 0
    },
    "reasons": []
  },
  "sensors": [
    {
      "id": "alpha",
      "blocking": false,
      "missing": "skip",
      "presence": "present",
      "report_path": "artifacts/alpha/report.json",
      "verdict": {
        "status": "pass",
        "counts": {
          "info": 1,
          "warn": 0,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "informational"
    },
    {
      "id": "beta",
      "blocking": false,
      "missing": "skip",
      "presence": "present",
      "report_path": "artifacts/beta/report.json",
      "verdict": {
        "status": "pass",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "informational"
    }
  ],
  "highlights": [
    {
      "sensor_id": "alpha",
      "finding": {
        "severity": "info",
        "code": "info-check",
        "message": "All good",
        "fingerprint": "7f2a9da49339f5f425b394e872ffccd54c1acfa9fc3b9e6b59dabb739c28289c"
      }
    }
  ],
  "policy": {
    "warn_is_fail": false,
    "max_highlights": 7,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Highlights",
      "Repo contract",
      "Dependencies",
      "Policy",
      "Tests",
      "Diagnostics",
      "Performance",
      "Environment",
      "Other"
    ],
    "sensors": []
  }
}
